--- a/client/app.html
+++ b/client/app.html
@@ -4,7 +4,7 @@
             {{> menu}}
         </div><div class="app-content">
             {{#unless loaded}}
-            <div class="loading serif">
+            <div class="loading loader serif">
                 LOADING...
             </div>
             {{/unless}}
