[feature] runes and spells page

--- a/client/head.html
+++ b/client/head.html
@@ -1,4 +1,6 @@
 <head>
+    <title>League of Legends Database</title>
+
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=IM+Fell+English+SC' rel='stylesheet' type='text/css'>
